5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1747_1532.log
== TEST (2019-05-16 10:43:37) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input(""))
	k = int(input(""))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:43:54) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input(""))
	k = int(input(""))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:08) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:13) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:16) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:30) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:06) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:11) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = 0

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- ERROR:
File "XXXX", line 6
    while ():
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:50) 
-- CODE:
from math import *

x = 0**1 * 0**2
y = 0 + 2
k = 0
senh = ""

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(y)) * k
	print(round(senh, 9))
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:40) 
-- CODE:
from math import *

x = 0
y = 2
k = 0
senh = ""

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x / factorial(1 + y)) * k
	print(round(senh, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:09) 
-- CODE:
from math import *

z = 0**(2)
y = 2
k = 0
senh = ""

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x * z / factorial(1 + y)) * k
	print(round(senh, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:34) 
-- CODE:
from math import *
x = 0
z = x**(2)
y = 2
k = 0
senh = ""

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x * z / factorial(1 + y)) * k
	print(round(senh, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:49) 
-- CODE:
from math import *
x = ""
z = x**(2)
y = 2
k = 0
senh = ""

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x * z / factorial(1 + y)) * k
	print(round(senh, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z = x**(2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:11) 
-- CODE:
from math import *
x = 0
z = x**(2)
y = 2
k = 0
senh = ""

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	
	senh = (x * z / factorial(1 + y)) * k
	print(round(senh, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:54:32) 
-- CODE:
from math import *
x = 0
z = 0
y = 0
k = 0
senh = (x / factorial(1)) * k

while(senh != k):
	x=float(input("x: "))
	k = int(input("k: "))
	senhx = senh * (x**2 / 1 + 2)
	
	print(round(senh, 9))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
